@@ -5,13 +5,11 @@ import net.mikhailov.books.library.mapper.AuthorMapper;
 import net.mikhailov.books.library.mapper.IdMapper;
 import net.mikhailov.books.library.repository.AuthorRepository;
 import net.mikhailov.books.model.AuthorDTO;
-import net.mikhailov.books.model.IdDTO;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author Mikhailov Evgenii
@@ -26,16 +24,26 @@ public class AuthorServiceImpl implements AuthorService{
 
 
     @Override
-    public IdDTO postAuthor(AuthorDTO authorDTO) {
+    public AuthorDTO postAuthor(AuthorDTO authorDTO) {
         if (authorRepository.existsAuthorByFirstnameAndLastname(authorDTO.getName(), authorDTO.getSurname())) {
             throw new ResponseStatusException(
                     HttpStatus.CONFLICT, "Author with same name found");
         }
-        return idMapper.authorToIdDTO(authorRepository.save(authorMapper.authorDTOToAuthor(authorDTO)));
+        return authorMapper.authorToAuthorDTO(authorRepository.save(authorMapper.authorDTOToAuthor(authorDTO)));
     }
 
     @Override
     public List<AuthorDTO> getAllAuthors() {
-        return authorRepository.findAll().stream().map(item -> authorMapper.authorToAuthorDTO(item)).collect(Collectors.toList());
+        return authorRepository.findAll().stream().map(item -> authorMapper.authorToAuthorDTO(item)).toList();
+    }
+
+    @Override
+    public AuthorDTO putAuthor(Long id, AuthorDTO authorDTO) {
+        if (!authorRepository.existsById(id.intValue())) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Author not found");
+        }
+        authorDTO.setId(id.intValue());
+        return authorMapper.authorToAuthorDTO(authorRepository.save(authorMapper.authorDTOToAuthor(authorDTO)));
+
     }
 }
